# ocr-gauntlet

./: .env.example  .gitignore  CLAUDE.md  README.md  ocr_gauntlet_spec.md  pyproject.toml
notebooks/: 01_gauntlet.ipynb  02_docling_deep_dive.ipynb  03_cost_calculator.ipynb
notebooks/.ipynb_checkpoints/: 01_gauntlet-checkpoint.ipynb
scripts/: download_samples.py
src/ocr_gauntlet/: engines.py  metrics.py  utils.py  visualize.py
